package com.algonquin.cst8288.fall24.assignment1.treatment;

import com.algonquin.cst8288.fall24.assignment1.patient.Patient;

public interface TreatmentPlan {
	String createTreatmentPlan(Patient patient);
}